--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,3 @@
 <p>GAWire API</p>
+<%= react_component("HelloWorld",{name:"John"}, {prerender: true}) %>
+<%= react_component('Hello', {}, {prerender: true}) %>
