added the ga logo to the header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <%= react_component('Header', {user: current_user}, {prerender: true}) %>
+    <%= react_component('Header', {user: current_user, img: asset_url('/assets/ga-logo.png')}, {prerender: true}) %>
     <%= yield %>
     <%= react_component('Footer', {}, {prerender: true}) %>
   </body>
