styled header to be horizontal black background and conditional showing avatar and logout or signup/in whether a user is signed in

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,24 @@
 }
 
 .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   background-color: black;
   color: white;
+}
+
+.header > a {
+  color: white;
+  text-decoration: none;
+}
+
+.header-logo {
+  display: flex;
+  flex-direction: row;
+  font-size: 25px;
+}
+
+.header-logo > img {
+  height: 30px;
 }
