--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@
   justify-content: space-around;
   background-color: black;
   color: white;
-  padding-top: 4px;
+  padding-top: 5px;
 }
 
 .nav-bar {
@@ -37,12 +37,14 @@
   font-size: 10px;
   color: white;
   text-decoration: none;
+  font-family: 'Sumana', serif;
 }
 
 .header-logo {
   display: flex;
   flex-direction: row;
-  font-size: 20px;
+  font-size: 25px;
+  font-family: 'Teko', sans-serif;
 }
 
 .header-logo > img {
