--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>GaWireApi</title>
+    <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sumana" rel="stylesheet">
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= csrf_meta_tags %>
   </head>
