--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,8 @@
   justify-content: space-around;
   background-color: black;
   color: white;
-  padding-top: 5px;
+  padding: 0;
+  height: 26px;
 }
 
 .nav-bar {
