--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,3 +55,17 @@
 .header-logo > img {
   height: 25px;
 }
+
+.footer {
+  position: fixed;
+  right: 0;
+  bottom: 0px;
+  left: 0;
+  padding: 0;
+  margin: 0;
+  background-color: #efefef;
+  text-align: center;
+  height: 20px;
+  font-size: 10px;
+  font-family: 'Sumana', serif;
+}
