--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,12 +62,14 @@
 
 .list-header {
   margin-top: 15px;
+  font-family: 'Sumana', serif;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 
 .post-item {
+  font-family: 'Roboto', sans-serif;
   border-bottom: 1px solid black;
 }
 
