--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
   <head>
     <title>GaWireApi</title>
     <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Sumana" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sumana" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <%= stylesheet_link_tag    "application", media: "all" %>
     <%= csrf_meta_tags %>
   </head>
