--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,74 +14,80 @@
 @import "bootstrap";
 
 .avatar {
-  display: inline;
-  height: 20px;
-  border-radius: 100%;
+    display: inline;
+    height: 20px;
+    border-radius: 100%;
 }
 
 .header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: black;
-  color: white;
-  padding: 0;
-  height: 26px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: black;
+    color: white;
+    padding: 0;
+    height: 26px;
 }
 
 .nav-bar {
-  width: 100px;
+    width: 100px;
 }
 
 .nav-link {
-  display: inline;
-  font-size: 10px;
-  color: white;
-  text-decoration: none;
-  font-family: 'Sumana', serif;
+    display: inline;
+    font-size: 10px;
+    color: white;
+    text-decoration: none;
+    font-family: 'Sumana', serif;
 }
 
 .header-logo {
-  display: flex;
-  flex-direction: row;
-  font-family: 'Teko', sans-serif;
-  margin-left: 25px;
+    display: flex;
+    flex-direction: row;
+    font-family: 'Teko', sans-serif;
+    margin-left: 25px;
 }
 
 .header-logo > h6 {
-  font-size: 27px;
+    font-size: 27px;
 }
 
 .header-logo > img {
-  height: 25px;
+    height: 25px;
 }
 
 .new-button {
-  float: right;
+    float: right;
 }
 
 .list-header {
-  margin-top: 15px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .post-item {
-  border-bottom: 1px solid black;
+    border-bottom: 1px solid black;
+    text-align: center;
 }
 
+.post-item h4,
+.post-item p {
+    display: inline-block;
+    padding: 2% 8%;
+}
 
 .footer {
-  position: fixed;
-  right: 0;
-  bottom: 0px;
-  left: 0;
-  padding: 0;
-  margin: 0;
-  background-color: #efefef;
-  text-align: center;
-  height: 20px;
-  font-size: 10px;
-  font-family: 'Sumana', serif;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 0;
+    margin: 0;
+    background-color: #efefef;
+    text-align: center;
+    height: 20px;
+    font-size: 10px;
+    font-family: 'Sumana', serif;
 }
