created and added the favicon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css?family=Sumana" rel="stylesheet">
         <%= stylesheet_link_tag    "application", media: "all" %>
         <%= csrf_meta_tags %>
+        <%= favicon_link_tag 'gawire-favicon.png' %>
     </head>
 
     <body>
