--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
         <title>GaWireApi</title>
         <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Sumana" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <%= stylesheet_link_tag    "application", media: "all" %>
         <%= csrf_meta_tags %>
         <%= favicon_link_tag 'gawire-favicon.png' %>
