changed the size of the font in the post list

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -101,14 +101,8 @@ a:hover {
     font-family: 'Sumana', serif;
 }
 
-.post-item {
-    border-bottom: 1px solid black;
-}
-
-.post-item h4,
-.post-item p {
-    display: inline-block;
-    padding: 2% 8%;
+td {
+  font-size: 12px;
 }
 
 .footer {
