--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,10 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+h1 {
+  font-family: 'Sumana', serif;
+}
+
 a {
   color: black;
 }
@@ -147,6 +151,20 @@ tr td:nth-child(3){
   color: white;
   border-radius: 3px;
   padding: 2px;
+}
+
+.new-post {
+  margin-top: 50px;
+  width: 55%;
+}
+
+input[type="text"] {
+  width: 100%;
+}
+
+textarea {
+  width: 100%;
+  height: 300px;
 }
 
 
