--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -225,3 +225,34 @@ textarea {
   display: flex;
   justify-content: center;
 }
+
+.user-profile {
+  margin-top: 50px;
+}
+
+.user-profile > img {
+  height: 300px;
+  border-radius: 10px;
+}
+
+#top {
+  width: 50%;
+  background-color: gray;
+}
+
+.user-commits {
+
+}
+
+.user-card img {
+  height: 100px;
+  border-radius: 100%;
+}
+
+
+
+
+
+
+
+/**/
