--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Sumana', serif;
 }
 
@@ -91,7 +91,6 @@ a:hover {
     height: 50px;
     display: flex;
     flex-direction: row;
-    font-family: 'Teko', sans-serif;
 }
 
 .header-logo > h6 {
@@ -99,6 +98,7 @@ a:hover {
     color: white;
     font-size: 35px;
     line-height: 53px;
+    font-family: 'Teko', sans-serif;
 }
 
 .header-logo > img {
@@ -230,29 +230,46 @@ textarea {
   margin-top: 50px;
 }
 
-.user-profile > img {
-  height: 300px;
+
+.top img {
+  height: 250px;
   border-radius: 10px;
 }
 
-#top {
-  width: 50%;
-  background-color: gray;
+.top > div {
+  text-align: center;
+}
+
+.top {
+  margin: 0 auto;
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.users-list {
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 .user-commits {
+  align-self: center;
+}
 
+.user-card {
+  height: 250px;
+  width: 220px;
+  display: inline-block;
+  margin: 10px;
+  padding: 4px;
+  border: 1px solid black;
+  border-radius: 4px;
 }
 
 .user-card img {
-  height: 100px;
+  display: inline-block;
+  height: 150px;
   border-radius: 100%;
 }
-
-
-
-
-
-
-
-/**/
