--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,13 +26,19 @@ a {
   color: black;
 }
 
+a:active {
+  color:inherit;
+}
+
 a:hover {
   text-decoration: none;
   color: black;
   cursor: pointer;
 }
 
-
+.fa-caret-down {
+  color: white;
+}
 
 .avatar {
     display: inline-block;
@@ -66,6 +72,10 @@ a:hover {
 
 .nav-bar {
     height: 65px;
+}
+
+.dropdown-menu {
+  margin-top: 100px;
 }
 
 .nav-link {
