fixed some styles in the header need to still fix the log in log out showing avatar or login link

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  */
-@import "bootstrap";
+// @import "bootstrap";
 @import "font-awesome";
 
 body {
@@ -63,12 +63,17 @@ a:hover {
     vertical-align: middle;
 }
 
+.navigation {
+  background-color: black;
+}
+
 .header {
+    margin: 0 auto;
+    width: 75%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: black;
     color: white;
     padding: 0;
     height: 65px;
@@ -76,10 +81,6 @@ a:hover {
 
 .nav-bar {
     height: 65px;
-}
-
-.dropdown-menu {
-  margin-top: 100px;
 }
 
 .nav-link {
@@ -111,7 +112,7 @@ a:hover {
     display: inline;
     color: white;
     font-size: 35px;
-    line-height: 53px;
+    line-height: 35px;
     font-family: 'Teko', sans-serif;
 }
 
