--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,11 +84,14 @@ a:hover {
 }
 
 .nav-link {
-    display: inline;
+    display: block;
+    height: 65px;
+    margin: 0;
     font-size: 15px;
     color: white;
     text-decoration: none;
     font-family: 'Sumana', serif;
+    line-height: 65px;
 }
 
 .nav-link > i {
